--- a/Geolocator/requirements.txt
+++ b/Geolocator/requirements.txt
@@ -47,6 +47,7 @@ pefile==2019.4.18
 Pillow==8.0.1
 pipenv==2020.11.15
 pkginfo==1.6.1
+psycopg2==2.8.6
 Pygments==2.7.2
 pyinstaller==4.1
 pyinstaller-hooks-contrib==2020.10
